Check BackgroundEdgeOrigin when check BackgroundPosition.

We should check Background{X/Y}Origin when check
BackgroundPosition{X/Y}. BackgroundPosition same but
BackgroundEdgeOrigin different is not the same position, we should
return false when FillLayersEqual().

Bug: 823046

Signed-off-by: Zhuoyu Qian <zhuoyu.qian@samsung.com>
Change-Id: Ia7d0c5af33e1ee5986420dc054c2ce1b1f65e9b0
Reviewed-on: https://chromium-review.googlesource.com/967912
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546679}
Former-commit-id: ec61cb7c755b12c7c7e40f55f0f0f0626d13d10e